# grimoirelab-elk

./: pyproject.toml
.github/workflows/: tests.yml
grimoire_elk/: elastic.py  utils.py
grimoire_elk/enriched/: enrich.py  gitlabcomments.py  identities.py  studies.py  utils.py
schema/: affiliations.csv  askbot.csv  bugzillarest.csv  confluence.csv  crates.csv  cross_references.csv  demography_contribution.csv  discourse.csv  docker_deps.csv  docker_smells.csv  dockerhub.csv  functest.csv  gerrit.csv  git_survival.csv  github2_issues.csv  github2_pull_requests.csv  github_backlog.csv  github_events.csv  github_issues.csv  github_pull_requests.csv  github_repos.csv  gitlab_issues.csv  gitlab_merges.csv  gitter.csv  google_hits.csv  graal_cocom.csv  graal_colic.csv  groupsio.csv  hyperkitty.csv  jenkins.csv  jira.csv  kafka.csv  kitsune.csv  launchpad.csv  mattermost.csv  mediawiki.csv  meetup.csv  onion.csv  pagure.csv  phabricator.csv  (+10 more)
tests/: test_gitlabcomments.py
tests/data/: gitlabcomments.json
