[tool.poetry]
name = "GrimoireELK"
version = "0.77.0"
description = "GrimoireELK processes and stores software development data to ElasticSearch"
readme = "README.md"
authors = [
   "Bitergia <grimoirelab-discussions@lists.linuxfoundation.org>"
]
repository = "https://github.com/chaoss/grimoirelab-elk"
keywords = ["development repositories analytics"]
license = "GPL-3.0-or-later"
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Software Development',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6'
]

packages = [
   { include = "grimoire_elk"},
   { include = "tests", format = "sdist" },
]

include = [
  "grimoire_elk/enriched/mappings/*.json"
]

[tool.poetry.extras]
mysql = ["PyMySQL"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/chaoss/grimoirelab-elk/issues"

[tool.poetry.scripts]
p2o = 'utils.p2o:main'
gelk_mapping = 'utils.gelk_mapping:main'

[tool.poetry.dependencies]
python = "^3.6"
elasticsearch = "6.3.1"
elasticsearch-dsl = "6.3.1"
requests = "2.21.0"
urllib3 = "1.24.3"
geopy = "^2.0.0"
PyMySQL = "0.9.3"
pandas = ">=0.22.0,<=0.25.3"
statsmodels = "^0.9.0"
sortinghat = "^0.7.15"
grimoirelab-toolkit = "^0.2.0"
cereslib = "^0.1.15"
graal = "^0.2.9"
perceval = "^0.17.7"
perceval-mozilla = "^0.2.12"
perceval-opnfv = "^0.1.19"
perceval-puppet = "^0.1.18"
perceval-finos = "^0.1.9"
perceval-weblate = "^0.1.0"

[tool.poetry.dev-dependencies]
httpretty = "^0.9.6"
sortinghat = {git = "https://github.com/chaoss/grimoirelab-sortinghat.git", rev = "master"}
grimoirelab-toolkit = {git = "https://github.com/chaoss/grimoirelab-toolkit.git", rev = "master"}
cereslib = {git = "https://github.com/chaoss/grimoirelab-cereslib.git", rev = "master"}
graal = {git = "https://github.com/chaoss/grimoirelab-graal.git", rev = "master"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
